src/app/components/top-about/top-about.component.scss
$black: #000000;
$dark-grey: #707070;
$medium-grey: #7D828F;
$light-grey: #C8CCD8;
$very-light-grey: #EEEFF4;
$red: #DF5656;
$font: 'Spartan',
sans-serif;




//----------------Top section pages:About and Contact ---------------
.top-section-cont {
    padding: 2% 7% 5% 10%;
    .img-col {
        @media screen and (max-width: 756px) {
            overflow-x: hidden;
        }
        img {
            @media screen and (max-width: 1081px) {
                width: 160% !important;
            }
            width: 120%;
        }
    }
    .text-col {
        @media screen and (min-width: 1080px) {
            position: absolute;
            left: 42%;
            top: 40% !important;
            padding: 13% 7% 12% 10% !important;
        }
        @media screen and (min-width: 757px) {
            position: absolute;
            left: 42%;
            top: 60%;
            padding: 13% 7% 10% 10%;
        }
        background-color: white;
        h1 {
            display: block;
            position: absolute;
            top: -12%;
            left: -20%;
            @media screen and (min-width: 1080px) {
                font-size: 200px;
            }
            font-size: 150px;
            font-family: sans-serif;
            font-weight: 400 ;
            color: $very-light-grey;
            padding-left: 17%;
            @media screen and (max-width: 756px) {
                display: none;
            }
        }
        h3 {
            @media screen and (max-width: 756px) {
                margin-top: 25px;
            }
            font-size: 56px;
            font-weight: 300;
            letter-spacing: -0.2rem;
            @media screen and (min-width:1080px){
                padding-right: 15%;
            }
            
        }
        p {
            font-size: 16px;
            padding-top: 25px;
            @media screen and (min-width:1080px){
                padding-right: 30%;
            }
        }
    }
}

